--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ lib/gcforest/cascade/__pycache__/
 lib/gcforest/datasets/__pycache__/
 lib/gcforest/estimators/__pycache__/
 lib/gcforest/utils/__pycache__/
-*/__pycache__/
+logs/
+datasets/
